HTMl e CSS página de login finalizado

--- a/Front-End/index.html
+++ b/Front-End/index.html
@@ -6,8 +6,6 @@
     <title>WishList</title>
 </head>
 <body class="corpo">
-    <header class="cabecalho">
-    </header>
     <main>  
         <section class="login">
             <div class="content alinhando-centro">
@@ -17,13 +15,16 @@
                 </div>
                 <div class="meio">
                     <div class="superior">
-
+                        <h1>WishList</h1>
+                        <img src="imagens/Logo.png" alt="Imagem ilustrativa de uma lista">
                     </div>
                     <div class="texto-centro">
-
+                        <p>Ensira seus dados abaixo para acessar sua lista</p>
                     </div>
                     <div class="caixas">
-                        
+                        <input type="email" name="Email" size="50" placeholder="Email">
+                        <input type="password" name="Senha" size="50" placeholder="Senha">
+                        <input class="entrar" type="button" value="Entrar">
                     </div>
                 </div>
                 <div class="direito">
