Erro do backgroud corrigido

--- a/Front-End/Listagem_Cadastro/Listagem.html
+++ b/Front-End/Listagem_Cadastro/Listagem.html
@@ -37,6 +37,7 @@
                 </div>
             </section>
         </main>
-        <footer>        
+        <footer class="rodape">   
+        </footer>     
     </body>
     </html>
