--- a/Front-End/Login/index.html
+++ b/Front-End/Login/index.html
@@ -34,7 +34,7 @@
             </div>
         </section>
     </main>
-    <footer>        
+    <footer class="rodape">        
     </footer>
 </body>
 </html>
